--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -171,52 +171,43 @@
             }
         }
     }
+    .grid-container1{
+    // grid-template-columns: repeat(auto-fit, 186px);
+    grid-template-columns: repeat(2, 1fr);
+}
+.grid-container2,.grid-container3{
+    // grid-template-columns: repeat(auto-fit, 186px);
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .blogs{
+      grid-template-columns: repeat(2, 1fr);
+      margin-top: 6rem;
+  }
+  .portfolios{
+      grid-template-columns: repeat(2, 1fr);
+  }
+  .header-content .right-header{
+      padding-right: 9rem;
+  }
     
 }
-@media screen and (max-width:1500px){
-    .grid-container1{
-        grid-template-columns: repeat(auto-fit, 186px);
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .grid-container2,.grid-container3{
-        grid-template-columns: repeat(auto-fit, 186px);
-        grid-template-columns: repeat(1, 1fr);
-      }
-}
 
 
 
-@media screen and (max-width:1250px){
-    .blogs{
-        grid-template-columns: repeat(2, 1fr);
-        margin-top: 6rem;
-    }
-    .portfolios{
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .header-content .right-header{
-        padding-right: 9rem;
-    }
-
-}
 @media screen and (max-width:660px){
-    .blogs{
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .portfolios{
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .grid-container1{
-        grid-template-columns: repeat(auto-fit, 186px);
-        grid-template-columns: repeat(1, 1fr);
-      }
-}
-@media screen and (max-width:545px){
-    .grid-container2, .grid-container3{
-        grid-template-columns: repeat(auto-fit, 186px);
-    }
-  
+    .blogs {
+    grid-template-columns: repeat(1, 1fr);
   }
+
+  .portfolios {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .grid-container1{
+    // grid-template-columns: repeat(auto-fit, 186px);
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 
 @media screen and (max-width:1070px){
     .about-container{
